valid_tests/statements/test2.go
func main() {
    var x int
    x = 0
    
    // For infinito com break
    for {
        x = x + 1
        if x > 5 {
            break
        }
    }
}
