invalid_tests/statements/test7.go
func main() {
    var i int = 0
    
    // For com condição inválida
    for i {               // Erro - condição deve ser bool, não int
        i = i - 1
    }
}
